versioned_docs/version-15/manual/3_0_model-view/3_3_portions-manager.md
---
sidebar_position: 3
---
# Portions manager


The Portions Manager is a great tool to manage complicated models. Parts of the model ie. floors, frames, columns, bracings, beams, etc. This function can be achieved on the **Portions Manager** tab (Located on the right **_[Side panel](../1_0_general-description/1_2_the-main-window.md#side-panel)_** as a default.).


![](img\wp-content-uploads-2021-04-4-4-portions-2.png)


![](img\wp-content-uploads-2021-04-4-4-portions-1.png)


A new portion can be added by clicking the **New Portion** icon (#2) and entering the name of it. If part of the model has been previously selected, these objects will be added to the new portion at the same time.


The portions can be arranged into folders. A new folder can be created by clicking the **New folder** icon (#1).


To turn on a portion, check the check-box in front of the name of the portion. More portions can be turned on at the same time by checking more check-boxes or also by checking folders.


If the _Show hidden parts of the structure translucently_ check box (#6) is clicked at the bottom of the **Portions Manager** tab, then the hidden parts of the model are also shown with faint grey lines.


Any objects of the structural model can be part of more portions at the same time.


To modify a previously defined portion, select the relevant parts of the model which will be the subject of the modification, then select the portion you are going to modify, and finally click on the **Modify** icon (#3).


![](img\wp-content-uploads-2021-04-4-4-portions-3.png)


The **Modify portion** window will appear with the following options:


![](img\wp-content-uploads-2021-04-4-4-portions-4.png)

- **Add selected elements to the portion:** by clicking the OK button, the selected members will be added to the active portion. If some members in the selection already belong to the actually modified portion, this operation will have no additional effect.

- **Remove selected elements from the portion:** all those selected elements will be removed from the modified portion.

- **Assign only the selected elements to the portion:** the modified portion will contain only the selected elements.


Renaming the Portion can be done by clicking the name of the portion and clicking on the **Rename** icon (#5).


A portion can be deleted by clicking the name of the portion and clicking the **Delete** button (#4).

